# chriskumm.com_django

./: .env.example  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: django.yml
ai_chat/: admin.py  models.py  urls.py  views.py
ai_chat/migrations/: 0001_initial.py  0002_alter_systemmessage_options.py
ai_pals/: apps.py  consumers.py  routing.py  urls.py  views.py
art/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
art/fixtures/: art_standard.json
art/migrations/: 0001_initial.py  0002_piece_image_b64_thumbnail.py  0003_alter_piece_image_b64_thumbnail.py
chat/: consumers.py  routing.py  urls.py  views.py
chat/templates/chat/: ai_chat.html  echo.html  room.html
core/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_inquiry.py  0003_auto_20210110_1611.py  0004_auto_20210112_1508.py  0005_auto_20210112_2002.py  0006_inquiry_ip_address.py  0007_delete_inquiry.py
drf_project/: asgi.py  custom_logging.py  settings.py  urls.py
templates/: 403_IE_warning.html  503.html
