[tool.poetry]
name = "chriskumm.com_django"
version = "1.0.0"
description = "Django back end for ChrisKumm.com"
authors = ["Christopher Kumm <chrislkumm@protonmail.com>"]
license = "UNLICENSED"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.1"
python-decouple = "^3.5"
django-ckeditor = "^6.2.0"
django-admin-interface = "^0.28.3"
djangorestframework = "^3.13.1"
django-cors-headers = "^4.0.0"
requests = "^2.27.1"
Pillow = "^10.1.0"
daphne = "^4.0.0"
twisted = "^23.10.0"
openai = "^0.28.1"
django-solo = "^2.1.0"
django-modern-user = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
target-version = ['py310']
# How to use `extend-exclude` is very poorly documented,
# but these links might be useful to understand it.
# https://github.com/psf/black/issues/1473
# https://stackoverflow.com/questions/60381208/ignoring-django-migrations-in-pyproject-toml-file-for-black-formatter
extend-exclude = '''
/(
  | migrations
)/
'''
